# currency_conversion

./: .clangd  CMakeLists.txt  Makefile  docker-compose.yml
.github/workflows/: ci.yml  docker.yaml
configs/: config_vars.testing.yaml  config_vars.yaml  secure_data.json  static_config.yaml
postgresql/schemas/: db_1.sql
schemas/: schemas.yaml
src/: main.cpp
src/components/rate_manager/: component.cpp  component.hpp  secdist.cpp  secdist.hpp
src/handlers/currencies/: handler.cpp  handler.hpp
src/handlers/rates/: handler.cpp  handler.hpp
src/handlers/update/: handler.cpp  handler.hpp
src/models/: Currency.hpp  ExchangeRates.hpp
src/sql/: sql_querries.hpp
tests/: conftest.py
